--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="pref_delay">延时抢红包</string>
     <string name="pref_delay_time">延时时长</string>
     <string name="pref_password">口令红包</string>
-    <string name="input_delay_message">请输入需要延时的时间（毫秒数）</string>
+    <string name="delay_message">延迟0毫秒拆开红包</string>
 </resources>
