--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="pref_delay">延时抢红包</string>
     <string name="pref_delay_time">延时时长</string>
     <string name="pref_password">口令红包</string>
+    <string name="pref_send_password">发送口令</string>
     <string name="delay_message">延迟0毫秒拆开红包</string>
     <string name="setting">设置</string>
     <string name="about">关于</string>
