修复第一次安装要重新打开开关才可以用，添加金额提示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">QQ红包</string>
     <string name="pref_open">抢红包</string>
+    <string name="pref_amount">金额提示</string>
     <string name="pref_delay">延时抢红包</string>
     <string name="pref_delay_time">延时时长</string>
     <string name="pref_password">口令红包</string>
